--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,86 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title     = {Relativity: the Special and General Theory},
-  author    = {Einstein, Albert},
-  year      = {1920},
-  publisher = {Methuen & Co Ltd},
-  html      = {relativity.html}
+@article{zhao2019bcdt,
+  title       = {On applicability of a fully distributed hydrological model in the cold and alpine watershed of Northwest China (In Chinese with English abstract)},
+  author      = {Yi Zhao and Zhuotong Nan* and Xiangfei Li and Yi Xu and Ling Zhang},
+  journal     = {Journal of Glaciology and Geocryology},
+  volume      = {41},
+  number      = {1},
+  pages       = {147--157},
+  year        = {2019},
+  doi         = {10.7522/j.issn.1000-0240.2019.0003},
+  abbr        = {冰川冻土},
+  abstract    = {Distributed-Hydrology-Soil-Vegetation-Model (DHSVM) is a grid-based distributed hydrological model and has been widely used to simulate hydrological processes at high spatiotemporal resolution across the world owing to its particular calculation of surface water and heat balance. However, its applicability in cold and alpine regions remains unclear. This paper employed DHSVM to simulate hydrological processes during the period of 2001 to 2009 at a 300 meters and 3 hours modeling resolutions in the Babao River basin, a representative mountainous river basin located within the Qilian Mountains in the cold region of Northwest China. The applicability was thus validated with observations at the basin outlet. Parametric sensitivity analysis shows that lateral conductivity, field capacity, leaf area index and albedo are some most sensitive parameters. The default model parameters lead to overestimation of potential evaporation, and consequent underestimation of streamflow simulation in summers. Using calibrated parameters, the model can achieve good simulation with Nash-Sutcliffe efficiency coefficients of 0.72 and 0.87 in the calibration period (2001-2004), and 0.60 and 0.74 in the validation period (2005-2009) for daily and monthly simulations, respectively. This study concludes that DHSVM is generally capable for simulating hydrological processes at high spatial and temporal resolutions in cold and alpine regions, although it is insufficient in representing freezing and thawing processes occurred in soil, resulting in lower accuracy of streamflow simulation in springs, which should be addressed in future when modelling in those areas.},
 }
 
-@book{einstein1956investigations,
-  bibtex_show = {true},
-  title       = {Investigations on the Theory of the Brownian Movement},
-  author      = {Einstein, Albert},
-  year        = {1956},
-  publisher   = {Courier Corporation},
-  preview     = {brownian-motion.gif}
+@article{zhao2019Water,
+  title   = {Calibrating a hydrological model by stratifying frozen ground types and seasons in a cold alpine basin},
+  author  = {Zhao, Yi and Nan, Zhuotong and Yu, Wenjie and Zhang, Ling},
+  journal = {Water},
+  volume  = {11},
+  number  = {5},
+  pages   = {985},
+  year    = {2019},
+  doi     = {10.3390/w11050985},
+  abbr    = {Water},
+  abstract = {Frozen ground and precipitation seasonality may strongly affect hydrological processes in a cold alpine basin, but the calibration of a hydrological model rarely considers their impacts on model parameters, likely leading to considerable simulation biases. In this study, we conducted a case study in a typical alpine catchment, the Babao River basin, in Northwest China, using the distributed hydrology–soil–vegetation model (DHSVM), to investigate the impacts of frozen ground type and precipitation seasonality on model parameters. The sensitivity analysis identified seven sensitive parameters in the DHSVM, amid which soil model parameters are found sensitive to the frozen ground type and land cover/vegetation parameters sensitive to dry and wet seasons. A stratified calibration approach that considers the impacts on model parameters of frozen soil types and seasons was then proposed and implemented by the particle swarm optimization method. The results show that the proposed calibration approach can obviously improve simulation accuracy in modeling streamflow in the study basin. The seasonally stratified calibration has an advantage in controlling evapotranspiration and surface flow in rainy periods, while the spatially stratified calibration considering frozen soil type enhances the simulation of base flow. In a typical cold alpine area without sufficient measured parametric values, this approach can outperform conventional calibration approaches in providing more robust parameter values. The underestimation in the April streamflow also highlights the importance of improved physics in a hydrological model, without which the model calibration cannot fully compensate the gap.}
+} 
+
+@article{zhao2022TC,
+  title   = {Convective Heat Transfer of Spring Meltwater Accelerates Active Layer Phase Change in Tibetan Permafrost Areas},
+  author  = {Zhao, Yi and Nan, Zhuotong and Ji, Hailong and Zhao, Lin},
+  journal = {The Cryosphere},
+  volume  = {16},
+  number  = {3},
+  pages   = {825--849},
+  year    = {2022},
+  doi     = {10.5194/tc-16-825-2022},
+  abbr    = {TC},
+  abstract = {Convective heat transfer (CHT) is one of the important processes that control the near-ground surface heat transfer in permafrost areas. However, this process has often not been considered in most permafrost studies, and its influence on freezing–thawing processes in the active layer lacks quantitative investigation. The Simultaneous Heat and Water (SHAW) model, one of the few land surface models in which the CHT process is well incorporated into the soil heat–mass transport processes, was applied in this study to investigate the impacts of CHT on the thermal dynamics of the active layer at the Tanggula station, a typical permafrost site on the eastern Qinghai–Tibet Plateau with abundant meteorological and soil temperature and soil moisture observation data. A control experiment was carried out to quantify the changes in active layer temperature affected by vertical advection of liquid water. Three experimental setups were used: (1) the original SHAW model with full consideration of CHT, (2) a modified SHAW model that ignores CHT due to infiltration from the surface, and (3) a modified SHAW model that completely ignores CHT processes in the system. The results show that the CHT events occurred mainly during thaw periods in melted shallow (0–0.2 m) and intermediate (0.4–1.3 m) soil depths, and their impacts on soil temperature at shallow depths were significantly greater during spring melting periods than summer. The impact was minimal during freeze periods and in deep soil layers. During thaw periods, temperatures at the shallow and intermediate soil depths simulated under the scenario considering CHT were on average about 0.9 and 0.4 ∘C higher, respectively, than under the scenarios ignoring CHT. The ending dates of the zero-curtain effect were substantially advanced when CHT was considered due to its heating effect. However, the opposite cooling effect was also present but not as frequently as heating due to upward liquid fluxes and thermal differences between soil layers. In some periods, the advection flow from the cold layer reduced the shallow and intermediate depth temperatures by an average of about -1.0 and -0.4 ∘C, respectively. The overall annual effect of CHT due to liquid flux is to increase soil temperature in the active layer and favor thawing of frozen ground at the study site.}
 }
 
-@article{einstein1950meaning,
-  abbr        = {AJP},
-  bibtex_show = {true},
-  title       = {The meaning of relativity},
-  author      = {Einstein, Albert and Taub, AH},
-  journal     = {American Journal of Physics},
-  volume      = {18},
-  number      = {6},
-  pages       = {403--404},
-  year        = {1950},
-  publisher   = {American Association of Physics Teachers}
+@article{zhao2023WRR,
+  title   = {Evaluation of parameterization schemes for matric potential in frozen soil in land surface models: A modeling perspective},
+  author  = {Zhao, Yi and Nan, Zhuotong and Cao, Zetao and Ji, Hailong and Hu, Jianan},
+  journal = {Water Resources Research},
+  volume  = {59},
+  number  = {6},
+  pages   = {e2023WR034644},
+  year    = {2023},
+  doi     = {10.1029/2023WR034644},
+  abbr    = {WRR},
+  abstract = {Soil matric potential (SMP) is an important variable in land surface models (LSMs) for regulating soil hydrological processes and highly influenced by soil ice in frozen ground. In this study, four SMP parameterization schemes that incorporate different effects of soil pore ice were separately integrated into the Simultaneous Heat and Water (SHAW) model and evaluated for their ability to simulate heat and water transport at a permafrost monitoring site at the Tanggula Mountain Pass on the inner Qinghai‐Tibet Plateau based on the same data and model settings. The schemes differed in their treatment of pore ice effects, including effective porosity and cryosuction. An identifiability analysis of SMP‐related parameters for each scheme was performed, based on 1,000‐fold random parameter sampling. The scheme that considered both effects performed best, accurately simulating both soil moisture content and temperature in the active layer. The schemes that considered only one effect of pore ice showed limitations, with the effective porosity scheme underestimating unfrozen water content and the cryosuction scheme seriously overestimating it, and both schemes leading to large discrepancies in simulated soil temperature. The scheme that ignored both effects performed better than the partially considered schemes due to a compensating effect of reduced effective porosity and increased cryosuction in the presence of pore ice, but not as well as the scheme that considered both effects, particularly in simulating soil temperature during freezing periods and estimating unfrozen water content near the mid‐depth of the active layer.}
 }
 
-@article{PhysRev.47.777,
-  abbr              = {PhysRev},
-  title             = {Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author            = {Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract          = {In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal           = {Phys. Rev.},
-  location          = {New Jersey},
-  volume            = {47},
-  issue             = {10},
-  pages             = {777--780},
-  numpages          = {0},
-  year              = {1935},
-  month             = {May},
-  publisher         = aps,
-  doi               = {10.1103/PhysRev.47.777},
-  url               = {https://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html              = {https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf               = {example_pdf.pdf},
-  altmetric         = {248277},
-  dimensions        = {true},
-  google_scholar_id = {qyhmnyLat1gC},
-  video             = {https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info   = {. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation        = {* Example use of superscripts<br>† Albert Einstein},
-  selected          = {true},
-  inspirehep_id     = {3255}
+@article{zhao2024GRL,
+  title   = {Accelerated permafrost thaw linked to rising river temperature and widening channels},
+  author  = {Zhao, Yi and Li, Dongfeng},
+  journal = {Geophysical Research Letters},
+  volume  = {52},
+  number  = {1},
+  pages   = {e2024GL112752},
+  year    = {2025},
+  doi     = {10.1029/2024GL112752},
+  abbr    = {GRL},
+  abstract = {River‐controlled permafrost dynamics are crucial for sediment transport, infrastructure stability, and carbon cycle, yet are not well understood under climate change. Leveraging remotely sensed datasets, in‐situ hydrological observations, and physics‐based models, we reveal overall warming and widening rivers across the Tibetan Plateau in recent decades, driving accelerated sub‐river permafrost thaw. River temperature of a representative section (Tuotuohe River) on the central Tibetan Plateau, has increased notably (0.39°C/decade) from 1985 to 2017, facilitating heat transfer into the underlying permafrost via both convection and conduction. Consequently, the permafrost beneath rivers warms faster (0.37°C–0.66°C/decade) and has a ∼0.5 m thicker active layer than non‐inundated permafrost (0.17°C–0.49°C/decade). With increasing river discharge, the inundated area expands laterally along the riverbed (16.4 m/decade), further accelerating permafrost thaw for previously non‐inundated bars. Under future warmer and wetter climate, the anticipated intensification of sub‐river permafrost degradation will pose risks to riverine infrastructure and amplify permafrost carbon release.}
 }
 
-@article{einstein1905molekularkinetischen,
-  title     = {{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author    = {Einstein, A.},
-  journal   = {Annalen der physik},
-  volume    = {322},
-  number    = {8},
-  pages     = {549--560},
-  year      = {1905},
-  publisher = {Wiley Online Library}
+@article{zhao2025hybrid_model,
+  title   = {A hybrid modeling approach for improved simulation of thermal-hydrological dynamics in active layer on the Qinghai-Tibet Plateau},
+  author  = {Zhao, Yi and Nan, Zhuotong and Ji, Hailong and Chen, Yuhong and Ou, Mingyue and Li, Dongfeng},
+  journal = {Water Resources Research},
+  volume  = {61},
+  number  = {12},
+  pages   = {e2025WR040288},
+  year    = {2025},
+  doi     = {10.1029/2025WR040288},
+  abbr    = {WRR},
+  abstract = {Accurately modeling active layer dynamics on the warming and wetting Qinghai‐Tibet Plateau (QTP) is crucial for understanding local hydrological processes, ecosystem dynamics, and infrastructure integrity. However, land surface models (LSMs) are often limited by simplified representation of physical processes in frozen ground and by uncertain forcing data. We present a novel hybrid modeling approach that enables the use of the Simultaneous Heat and Water (SHAW) model, with its advanced representation of physical processes in frozen ground, in data‐sparse regions by generating robust lower boundary conditions from random forest‐corrected Noah LSM simulations. When evaluated at seven permafrost sites on the QTP, the hybrid approach significantly outperformed both the standalone Noah LSM and traditional SHAW configurations in simulating active layer temperature and moisture. For testing data, the hybrid approach achieved higher average Nash‐Sutcliffe efficiency values for soil temperature (ST) (0.81 vs. 0.69) and soil moisture (0.35 vs. 0.17) compared to the Noah LSM. Notably, the hybrid approach corrects key biases of the Noah LSM, which tends to overestimate ST and unfrozen water content during freezing periods. This study provides a robust framework for large‐scale simulation of permafrost dynamics in data‐sparse regions, with direct implications for assessing environment change, infrastructure risks, and carbon emissions linked to permafrost degradation.}
 }
 
-@article{einstein1905movement,
-  abbr    = {Ann. Phys.},
-  title   = {Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author  = {Einstein, A.},
-  journal = {Ann. Phys.},
-  volume  = {17},
-  pages   = {549--560},
-  year    = {1905}
-}
 
-@article{einstein1905electrodynamics,
-  title  = {On the electrodynamics of moving bodies},
-  author = {Einstein, A.},
-  year   = {1905}
-}
 
-@article{einstein1905photoelectriceffect,
-  bibtex_show = {true},
-  abbr        = {Ann. Phys.},
-  title       = {{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}},
-  author      = {Albert Einstein},
-  abstract    = {This is the abstract text.},
-  journal     = {Ann. Phys.},
-  volume      = {322},
-  number      = {6},
-  pages       = {132--148},
-  year        = {1905},
-  doi         = {10.1002/andp.19053220607},
-  award       = {Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name  = {Nobel Prize}
-}
 
-@book{przibram1967letters,
-  bibtex_show = {true},
-  title       = {Letters on wave mechanics},
-  author      = {Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year        = {1967},
-  publisher   = {Vision},
-  preview     = {wave-mechanics.gif},
-  abbr        = {Vision}
-}
+
+
