update wrr cover

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -66,7 +66,7 @@
   abstract = {River‐controlled permafrost dynamics are crucial for sediment transport, infrastructure stability, and carbon cycle, yet are not well understood under climate change. Leveraging remotely sensed datasets, in‐situ hydrological observations, and physics‐based models, we reveal overall warming and widening rivers across the Tibetan Plateau in recent decades, driving accelerated sub‐river permafrost thaw. River temperature of a representative section (Tuotuohe River) on the central Tibetan Plateau, has increased notably (0.39°C/decade) from 1985 to 2017, facilitating heat transfer into the underlying permafrost via both convection and conduction. Consequently, the permafrost beneath rivers warms faster (0.37°C–0.66°C/decade) and has a ∼0.5 m thicker active layer than non‐inundated permafrost (0.17°C–0.49°C/decade). With increasing river discharge, the inundated area expands laterally along the riverbed (16.4 m/decade), further accelerating permafrost thaw for previously non‐inundated bars. Under future warmer and wetter climate, the anticipated intensification of sub‐river permafrost degradation will pose risks to riverine infrastructure and amplify permafrost carbon release.}
 }
 
-@article{zhao2025hybrid_model,
+@article{zhao2025WRR,
   title   = {A hybrid modeling approach for improved simulation of thermal-hydrological dynamics in active layer on the Qinghai-Tibet Plateau},
   author  = {Zhao, Yi and Nan, Zhuotong and Ji, Hailong and Chen, Yuhong and Ou, Mingyue and Li, Dongfeng},
   journal = {Water Resources Research},
@@ -77,6 +77,7 @@
   doi     = {10.1029/2025WR040288},
   abbr    = {WRR},
   abstract = {Accurately modeling active layer dynamics on the warming and wetting Qinghai‐Tibet Plateau (QTP) is crucial for understanding local hydrological processes, ecosystem dynamics, and infrastructure integrity. However, land surface models (LSMs) are often limited by simplified representation of physical processes in frozen ground and by uncertain forcing data. We present a novel hybrid modeling approach that enables the use of the Simultaneous Heat and Water (SHAW) model, with its advanced representation of physical processes in frozen ground, in data‐sparse regions by generating robust lower boundary conditions from random forest‐corrected Noah LSM simulations. When evaluated at seven permafrost sites on the QTP, the hybrid approach significantly outperformed both the standalone Noah LSM and traditional SHAW configurations in simulating active layer temperature and moisture. For testing data, the hybrid approach achieved higher average Nash‐Sutcliffe efficiency values for soil temperature (ST) (0.81 vs. 0.69) and soil moisture (0.35 vs. 0.17) compared to the Noah LSM. Notably, the hybrid approach corrects key biases of the Noah LSM, which tends to overestimate ST and unfrozen water content during freezing periods. This study provides a robust framework for large‐scale simulation of permafrost dynamics in data‐sparse regions, with direct implications for assessing environment change, infrastructure risks, and carbon emissions linked to permafrost degradation.}
+  preview = {2025WRR_keyfigure.png},
 }
 
 
