--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -76,7 +76,7 @@
   year    = {2025},
   doi     = {10.1029/2025WR040288},
   abbr    = {WRR},
-  abstract = {Accurately modeling active layer dynamics on the warming and wetting Qinghai‐Tibet Plateau (QTP) is crucial for understanding local hydrological processes, ecosystem dynamics, and infrastructure integrity. However, land surface models (LSMs) are often limited by simplified representation of physical processes in frozen ground and by uncertain forcing data. We present a novel hybrid modeling approach that enables the use of the Simultaneous Heat and Water (SHAW) model, with its advanced representation of physical processes in frozen ground, in data‐sparse regions by generating robust lower boundary conditions from random forest‐corrected Noah LSM simulations. When evaluated at seven permafrost sites on the QTP, the hybrid approach significantly outperformed both the standalone Noah LSM and traditional SHAW configurations in simulating active layer temperature and moisture. For testing data, the hybrid approach achieved higher average Nash‐Sutcliffe efficiency values for soil temperature (ST) (0.81 vs. 0.69) and soil moisture (0.35 vs. 0.17) compared to the Noah LSM. Notably, the hybrid approach corrects key biases of the Noah LSM, which tends to overestimate ST and unfrozen water content during freezing periods. This study provides a robust framework for large‐scale simulation of permafrost dynamics in data‐sparse regions, with direct implications for assessing environment change, infrastructure risks, and carbon emissions linked to permafrost degradation.}
+  abstract = {Accurately modeling active layer dynamics on the warming and wetting Qinghai‐Tibet Plateau (QTP) is crucial for understanding local hydrological processes, ecosystem dynamics, and infrastructure integrity. However, land surface models (LSMs) are often limited by simplified representation of physical processes in frozen ground and by uncertain forcing data. We present a novel hybrid modeling approach that enables the use of the Simultaneous Heat and Water (SHAW) model, with its advanced representation of physical processes in frozen ground, in data‐sparse regions by generating robust lower boundary conditions from random forest‐corrected Noah LSM simulations. When evaluated at seven permafrost sites on the QTP, the hybrid approach significantly outperformed both the standalone Noah LSM and traditional SHAW configurations in simulating active layer temperature and moisture. For testing data, the hybrid approach achieved higher average Nash‐Sutcliffe efficiency values for soil temperature (ST) (0.81 vs. 0.69) and soil moisture (0.35 vs. 0.17) compared to the Noah LSM. Notably, the hybrid approach corrects key biases of the Noah LSM, which tends to overestimate ST and unfrozen water content during freezing periods. This study provides a robust framework for large‐scale simulation of permafrost dynamics in data‐sparse regions, with direct implications for assessing environment change, infrastructure risks, and carbon emissions linked to permafrost degradation.},
   preview = {2025WRR_keyfigure.png},
 }
 
