--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,7 +38,7 @@
   doi     = {10.5194/tc-16-825-2022},
   abbr    = {TC},
   abstract = {Convective heat transfer (CHT) is one of the important processes that control the near-ground surface heat transfer in permafrost areas. However, this process has often not been considered in most permafrost studies, and its influence on freezing–thawing processes in the active layer lacks quantitative investigation. The Simultaneous Heat and Water (SHAW) model, one of the few land surface models in which the CHT process is well incorporated into the soil heat–mass transport processes, was applied in this study to investigate the impacts of CHT on the thermal dynamics of the active layer at the Tanggula station, a typical permafrost site on the eastern Qinghai–Tibet Plateau with abundant meteorological and soil temperature and soil moisture observation data. A control experiment was carried out to quantify the changes in active layer temperature affected by vertical advection of liquid water. Three experimental setups were used: (1) the original SHAW model with full consideration of CHT, (2) a modified SHAW model that ignores CHT due to infiltration from the surface, and (3) a modified SHAW model that completely ignores CHT processes in the system. The results show that the CHT events occurred mainly during thaw periods in melted shallow (0–0.2 m) and intermediate (0.4–1.3 m) soil depths, and their impacts on soil temperature at shallow depths were significantly greater during spring melting periods than summer. The impact was minimal during freeze periods and in deep soil layers. During thaw periods, temperatures at the shallow and intermediate soil depths simulated under the scenario considering CHT were on average about 0.9 and 0.4 ∘C higher, respectively, than under the scenarios ignoring CHT. The ending dates of the zero-curtain effect were substantially advanced when CHT was considered due to its heating effect. However, the opposite cooling effect was also present but not as frequently as heating due to upward liquid fluxes and thermal differences between soil layers. In some periods, the advection flow from the cold layer reduced the shallow and intermediate depth temperatures by an average of about -1.0 and -0.4 ∘C, respectively. The overall annual effect of CHT due to liquid flux is to increase soil temperature in the active layer and favor thawing of frozen ground at the study site.},
-  preview = {2022TC_keyfigure.tif},
+  preview = {2022TC_keyfigure.png},
 }
 
 @article{zhao2023WRR,
@@ -52,7 +52,7 @@
   doi     = {10.1029/2023WR034644},
   abbr    = {WRR},
   abstract = {Soil matric potential (SMP) is an important variable in land surface models (LSMs) for regulating soil hydrological processes and highly influenced by soil ice in frozen ground. In this study, four SMP parameterization schemes that incorporate different effects of soil pore ice were separately integrated into the Simultaneous Heat and Water (SHAW) model and evaluated for their ability to simulate heat and water transport at a permafrost monitoring site at the Tanggula Mountain Pass on the inner Qinghai‐Tibet Plateau based on the same data and model settings. The schemes differed in their treatment of pore ice effects, including effective porosity and cryosuction. An identifiability analysis of SMP‐related parameters for each scheme was performed, based on 1,000‐fold random parameter sampling. The scheme that considered both effects performed best, accurately simulating both soil moisture content and temperature in the active layer. The schemes that considered only one effect of pore ice showed limitations, with the effective porosity scheme underestimating unfrozen water content and the cryosuction scheme seriously overestimating it, and both schemes leading to large discrepancies in simulated soil temperature. The scheme that ignored both effects performed better than the partially considered schemes due to a compensating effect of reduced effective porosity and increased cryosuction in the presence of pore ice, but not as well as the scheme that considered both effects, particularly in simulating soil temperature during freezing periods and estimating unfrozen water content near the mid‐depth of the active layer.},
-  preview = {2023WRR_keyfigure.tif},
+  preview = {2023WRR_keyfigure.png},
 }
 
 @article{zhao2025GRL,
@@ -66,7 +66,7 @@
   doi     = {10.1029/2024GL112752},
   abbr    = {GRL},
   abstract = {River‐controlled permafrost dynamics are crucial for sediment transport, infrastructure stability, and carbon cycle, yet are not well understood under climate change. Leveraging remotely sensed datasets, in‐situ hydrological observations, and physics‐based models, we reveal overall warming and widening rivers across the Tibetan Plateau in recent decades, driving accelerated sub‐river permafrost thaw. River temperature of a representative section (Tuotuohe River) on the central Tibetan Plateau, has increased notably (0.39°C/decade) from 1985 to 2017, facilitating heat transfer into the underlying permafrost via both convection and conduction. Consequently, the permafrost beneath rivers warms faster (0.37°C–0.66°C/decade) and has a ∼0.5 m thicker active layer than non‐inundated permafrost (0.17°C–0.49°C/decade). With increasing river discharge, the inundated area expands laterally along the riverbed (16.4 m/decade), further accelerating permafrost thaw for previously non‐inundated bars. Under future warmer and wetter climate, the anticipated intensification of sub‐river permafrost degradation will pose risks to riverine infrastructure and amplify permafrost carbon release.},
-  preview = {2025GRL_keyfigure.tif},
+  preview = {2025GRL_keyfigure.png},
 }
 
 @article{zhao2025WRR,
